tests/ui/type/type-ascription-precedence.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-precedence.rs:26:7
   |
LL |     &S: &S;
   |       ^ expected one of 8 possible tokens

error: aborting due to previous error

